Major security & approvals refactor: - Make permissions fully authority-based (remove role-based checks) - Introduce SecurityConstants and dynamic section access - Fix approval filtering by RoleCode - Update approval workflow seeding logic - Add finance access to supplier invoices - Fix CORS headers for PDF download - Add integration tests for permission security - Update documentation